sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: type int
var i : int =0;
        ^AlgInsertionSort:6: error: not found: value tab
{setValeur(tab[i], i);
           ^AlgInsertionSort:7: error: reassignment to val
i=i+1;
 ^